package tool;

/**
 * Created by xlo on 15-6-16.
 *
 */
public interface StringNameClass {

    boolean isThisName(String name);
    String getClassName();

}
