package view.main;

import tool.StringNameClass;

public interface UIDialog extends StringNameClass {
	
	void getInstance();
	void show();
	void dispose();

}
